# bachelors

./: .gitignore  ImageClassificator.py  LICENSE  ModuleRunner.py  README.md  blurr-detector.py  defaultConfig.json  moduleDefinitions.json  run_all_classifications.sh  run_classification.sh  run_user_classifications.sh  test.json  test.xlsx  test.xml
Actions/: action_interface.py  actioninterface.py  copy.py  copyminiature.py  noaction.py  print.py  report.py
CNN/: build.py
CNN/src/: CMakeLists.txt  INSTALL
CNN/src/include/: CNNBlurDetector.hpp  ModelConfig.hpp  PythonWrapper.hpp
CNN/src/src/: CNNBlurDetector.cpp  ModelConfig.cpp  PythonWrapper.cpp  main.cpp
CNN/src/windows_build/: MyTemplate.vstemplate  cnn.sln  cnn.vcxproj  cnn.vcxproj.filters
CNN/test/: README  run_tests.py
CNN/test/CNNBlurDetector/: CMakeLists.txt  prepare_links.sh
CNN/test/CNNBlurDetector/include/: CNNBlurDetector.hpp  CNNBlurDetector_UT.hpp  ModelConfig.hpp
CNN/test/CNNBlurDetector/src/: CNNBlurDetector.cpp  CNNBlurDetector_UT.cpp  ModelConfig.cpp
CNN/test/ModelConfig/: CMakeLists.txt  prepare_links.sh
CNN/test/ModelConfig/include/: ModelConfig_UT.hpp
CNN/test/ModelConfig/src/: ModelConfig_UIT.cpp
CNN/training_notebook/: BlurDetection.ipynb
ImageProcessor/include/: AnalyticalImageProcessor.hpp  DummyImageProcessor.hpp  ImageProcessor.hpp  ImageProcessorFactory.hpp  ImageProcessorIdentifiers.hpp  MLImageProcessor.hpp  PythonWrapper.hpp
ImageProcessor/src/: AnalyticalImageProcessor.cpp  ImageProcessor.cpp  ImageProcessorFactory.cpp  MLImageProcessor.cpp  PythonWrapper.cpp  main.cpp
Modules/: MachineLearning.py  ModuleInterface.py  fourier.py  laplace.py
Modules/cnn/: model.pt  moduleDefinition.json
Modules/fourier/: fourier.py  moduleDefinition.json
Modules/laplace/: laplace.py  moduleDefinition.json
PrepareSamples/: PrepareSamples.py
ScrapperScript/: ScrapperScript.py  exampleSearchQuery.json
Tests/: ImageClassificator_test.py  Module.py  ModuleRunner_test.py  TestModule.py  actions_test.py  fourier_test.py  laplace_test.py
Tests/Validators/: BlurValidator_UT.py  Validator_UT.py  Validator_test.py
Tests/Validators/BlurValidator_files/: test.json  test.xlsx  test.xml
Validators/: BlurValidator.py  Validator.py  blurValidator.py
docker/: dockerfile  start.sh
